# K1

./: .env  README.md  docker-compose.yaml  init-letsencrypt.sh  pyproject.toml
app/: Dockerfile  config.py  pyproject.toml  run.sh
app/core/: asgi.py  celery.py  logger.py  settings.py  tasks.py  urls.py
app/django_app/: admin.py  models.py
app/django_app/management/commands/: initadmin.py
app/fastapi_app/: db.py  dependencies.py  main.py
app/fastapi_app/routers/: __init__.py  block.py  security.py  user.py
app/fastapi_app/schema/: block.py  token.py  user.py
app/fastapi_app/security/: exeptions.py  security.py
nginx/: Dockerfile  nginx-entrypoint.sh
nginx/conf/: default.conf  default.conf.template
